<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ContactActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/contact_form"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@color/gray_color"/>


            <LinearLayout
                android:id="@+id/linearLayout8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/insert_email"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <android.support.design.widget.TextInputLayout
                    app:hintEnabled="false"
                    android:id="@+id/email_contact_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp">

                    <EditText
                        android:id="@+id/contact_email_editText"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/edit_text_style_afterlife"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="12dip"
                        android:paddingRight="20dip"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/insert_comment"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/comment_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/comment_editText"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:background="@drawable/edit_text_style_afterlife"
                        android:gravity="top"
                        android:inputType="textMultiLine"
                        android:overScrollMode="always"
                        android:padding="10dp"
                        android:scrollbarStyle="insideInset"
                        android:scrollbars="vertical" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/send_comment_button"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="40dp"
                    android:background="@color/colorAccent"
                    android:text="@string/send_comment"
                    android:textColor="#FAFAFA" />

                <Button
                    android:id="@+id/cancel_comment_button"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="25dp"
                    android:background="@color/gray_color"
                    android:text="@string/cancel_btn"
                    android:textColor="#FAFAFA" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
